Cleaned up data_analysis.ipynb

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "dbd6e37a",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "ba809673",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "array([[<AxesSubplot:title={'center':'views'}>]], dtype=object)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0e54972a",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "array([[<AxesSubplot:title={'center':'views'}>]], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "12ad04ce",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "132a359c",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "88dcbc3d",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "c95d2731",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "e9139a65",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "d0d49a90",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "<AxesSubplot:xlabel='downloads', ylabel='size'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "720ee1b2",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "<AxesSubplot:xlabel='likes', ylabel='size'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "id": "445890d1",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "2222498777       2223    334     4.0                139  3904189235  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "id": "a1812893",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
        "<AxesSubplot:xlabel='tag_name'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -577,6 +577,7 @@
    ],
    "source": [
     "popular_tags = mods_with_tags.groupby(\"tag_name\").size().sort_values(ascending=False).head(30)\n",
+    "# če zgoraj ne vzamem glave 30 zgleda graf čudno\n",
     "popular_tags.plot(kind=\"bar\")"
    ]
   },
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "id": "c54c82b7",
    "metadata": {},
    "outputs": [
@@ -600,7 +601,7 @@
        "<AxesSubplot:title={'center':'Uporaba osnovinh tag-ov'}, ylabel='uses'>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 19,
    "id": "d018943f",
    "metadata": {},
    "outputs": [
@@ -635,7 +636,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2370/86286689.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_3798/86286689.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  tag_vsecki = mods_with_tags.groupby(\"tag_name\").sum()[[\"likes\"]].sort_values(ascending=False, by=\"likes\").head(15)\n"
      ]
     },
@@ -645,7 +646,7 @@
        "<AxesSubplot:title={'center':'Všečki po popularnih tag-ih'}, ylabel='likes'>"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -667,30 +668,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 20,
    "id": "9cbe0995",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3406969117.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [184], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    .groupby(\"tag_name\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag_nalaganja = (mods_with_tags\n",
-    "                 .groupby(\"tag_name\")\n",
-    "                 .sum(\"downloads\")[[\"downloads\"]]\n",
-    "                 .sort_values(ascending=False, by=\"downloads\")\n",
-    "                 .head(15))"
+    "                .groupby(\"tag_name\")\n",
+    "                .sum(\"downloads\")[[\"downloads\"]]\n",
+    "                .sort_values(ascending=False, by=\"downloads\")\n",
+    "                .head(15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "id": "e5fcded3",
    "metadata": {},
    "outputs": [
@@ -700,7 +692,7 @@
        "<AxesSubplot:xlabel='tag_name'>"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -734,14 +726,6 @@
    "source": [
     "Vidimo, da če gledamo popularnost značk glede na všečke ali nalaganja so vrednosti podobne, ogledi se pa malce razlikujejo. Zgleda, da so mod-i o alternativni zgodovini pridobivajo pozornost a niso tako zanimivi, saj imajo mod-i tipa _gameplay_ več všečkov in nalaganj."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af7f2fc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
